Fixing team layout on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -116,6 +116,10 @@ header .material-icons {
 .team-section .person {
   padding: 1.5rem 0;
 }
+.team-section img {
+  width: 100%;
+  height: auto !important;
+}
 .team-section .name {
   font-weight: 500;
   margin: 0 0 0.4rem;
@@ -223,7 +227,7 @@ header .material-icons {
   color: #fff;
   background-color: #64a19d;
 }
-.flickity-prev-next-button {
+/*.flickity-prev-next-button {
   width: 3rem;
   height: 3rem;
   font-size: 6rem;
@@ -238,7 +242,7 @@ header .material-icons {
   height: 4px;
   width: 2.5rem;
   margin: 0;
-}
+}*/
 /*@media (min-width: 992px) {
   .flickity-page-dots .dot:last-child {
     width: 0;
